Build a fraction: Disable number pickability when on a fraction, so mouse clicks will fall through to the fraction itself
Build a fraction: Fixed: Numbers should move when dragging a fraction
Build a fraction: i18n
Build a fraction: Fixed: draggable numbers don't attach to fraction directly from tool dragging
Build a fraction: Make draggable numbers bigger, make draggable fraction bigger, center drag area on draggable fraction
Build a fraction: Increased container size and removed stroke from pieces so they don't look like they are already in a container
Build a fraction: Centered the drag area on the draggable fraction
Build a fraction: Made the background cream
Added draggable fractions
Build a Fraction: Added draggable numbers
Matching game: Color each bar the same color as the corresponding representation
Matching game: Animate bars when checking answer
Matching game: Fixed: patterns scramble as you drag them
Intro tab: Fixed: Number line doesn't show when selected
Matching game: Removed unused code and renamed classes
# 0.00.65 (63965) May 6, 2012
Added draggable pieces
# 0.00.64 (63963) May 5, 2012
Added draggable containers
Build a Fraction tab: Started canvas
Prepended "with" to copy methods for lombok data classes
Added a new (empty) tab for "Build a Fraction"
Intro tab: Fixed: Bucket clipping area was omitted while fixing #3314
# 0.00.63 (63725) Apr 24, 2012
Matching Game: switched from MatchingGameCanvas to ClientMatchingGameCanvas to improve performance, see #3314
Intro tab: Only update and render views when visible, see #3314
Intro tab: Added developer menu items for debugging performance, see #3314
Intro tab: Improved performance for cake slice dirty rectangles, see #3314
Intro tab: Fixed performance in PieSetContentNode for dirty rectangles, see #3314 [63694]
# 0.00.62 (63618) Apr 19, 2012
Matching Game: Added interleaved L-shape
Matching Game: Added 6-star
# 0.00.61 (63609) Apr 18, 2012
Matching Game: Added L-shaped diagonal